[package]
name = "mangafilter_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde"] }
